--- a/src/App.css
+++ b/src/App.css
@@ -20,69 +20,86 @@
     transition: 500ms;
 } */
 
-/* DashBoard Styles (Mobile) */
+/*///////////// DashBoard Styles (Mobile) ///////////////*/
 .dashboard-bg {
     background-image: url('mock-up-images/Dashboard_BG.svg');
     background-size: 100%;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     max-width:100vw; 
     z-index:1; 
 }
 .header {
-    background-image: url("mock-up-images/header.svg");
+    /* background-image: url("mock-up-images/header.svg"); */
+    background: #042788;
     background-size: 100vw;
+    border-radius: 0 0 20px 20px;
     background-repeat: no-repeat;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end:9;
     z-index:5;
+    
 }
 .dashboard-button {
     background-size: contain;
     background-repeat: no-repeat;
+    border-radius: 20px;
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.5);
 }
 .dashboard-button:nth-child(even) {
     margin-left: 3vw;
 }
+.dashboard-button:nth-child(odd) {
+    margin-right: 3vw;
+}
 .create-quiz { 
-    background-image: url("mock-up-images/create_quiz.svg");
+    /* background-image: url("mock-up-images/create_quiz.svg"); */
+    background: #F9B43C;
     grid-row-start: 9;
     grid-row-end: 18;
-    
 } 
 .scores {
-    background-image: url("mock-up-images/scores.svg");
+    /* background-image: url("mock-up-images/scores.svg"); */
+    background: #E41849;
     grid-row-start: 9;
     grid-row-end: 16;
     
 }
 .manage-schedule {
-    background-image: url("mock-up-images/sched.svg");
+    /* background-image: url("mock-up-images/sched.svg"); */
+    background:#F9B43C;
     grid-row-start: 16;
     grid-row-end: 23;
     
 }
 .arrange-class {
-    background-image: url("mock-up-images/arrange_class.svg");
+    /* background-image: url("mock-up-images/arrange_class.svg"); */
+    background: #E41849;
     grid-row-start: 18;
     grid-row-end: 25;
     
 }
 .test-yourself {
-    background-image: url("mock-up-images/test_yourself.svg");
+    /* background-image: url("mock-up-images/test_yourself.svg"); */
+    background: #042788;
     grid-row-start: 23;
     grid-row-end: 31;
     
 }
 .send-results {
-    background-image: url("mock-up-images/send_results.svg");
+    /* background-image: url("mock-up-images/send_results.svg"); */
+    background: #F9B43C;
     grid-row-start: 25;
     grid-row-end: 31;
 }
 
 /* Submenu */
 .create-quiz-submenu-item {
-    color: #F9B43C; 
+    color: #F9B43C;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-left: 0.8rem;
 }
 
