--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
     background-repeat: repeat-y;
     max-width:100vw; 
     z-index:1; 
+    height: 100%
 }
 .header {
     /* background-image: url("mock-up-images/header.svg"); */
